fixes rest of dark mode themes

--- a/resources/assets/less/skins/skin-purple-dark.less
+++ b/resources/assets/less/skins/skin-purple-dark.less
@@ -144,6 +144,20 @@ a {
 .pagination > .active > a:hover{
   background-color: var(--hover-link);
 }
+.tasks-menu > .dropdown-menu > li .menu{
+  background-color: var(--back-main);
+}
+
+.tasks-menu > .dropdown-menu > li .menu > li > a:hover .progress{
+  background-color: var(--background);
+}
+h2.task_menu{
+  color:var(--link);
+}
+.navbar-custom-menu > .navbar-nav > li > .dropdown-menu{
+  background-color:var(--back-main);
+  color:var(--link);
+}
 
 .main-header .navbar, .main-header .logo {
   background-color: var(--header);
@@ -311,7 +325,7 @@ input[type=text], input[type=search] {
 }
 .navbar-nav>.tasks-menu>.dropdown-menu>li.header {
   background-color: var(--back-main);
-  color: var(--header);
+  color: var(--link);
 }
 .open>.dropdown-toggle.btn-default {
   background-color: var(--back-sub);
