--- a/resources/assets/less/skins/skin-yellow-dark.less
+++ b/resources/assets/less/skins/skin-yellow-dark.less
@@ -138,6 +138,20 @@ a {
 .pagination > .active > a:hover{
   background-color: var(--hover-link);
 }
+.tasks-menu > .dropdown-menu > li .menu{
+  background-color: var(--back-main);
+}
+
+.tasks-menu > .dropdown-menu > li .menu > li > a:hover .progress{
+  background-color: var(--background);
+}
+h2.task_menu{
+  color:var(--link);
+}
+.navbar-custom-menu > .navbar-nav > li > .dropdown-menu{
+  background-color:var(--back-main);
+  color:var(--link);
+}
 .main-header .navbar, .main-header .logo {
   background-color: var(--header);
   background: -webkit-linear-gradient(top,  var(--header) 0%,var(--header) 100%);
